adds d64 methods to build script and BASIC skeleton

--- a/vice-config.ini
+++ b/vice-config.ini
@@ -2,17 +2,26 @@
 ConfigVersion=3.9
 
 [C64SC]
-MonitorXPos=2408
-MonitorYPos=1480
+SaveResourcesOnExit=1
+MonitorXPos=2497
+MonitorYPos=1360
 MonitorWidth=884
 MonitorHeight=652
 MonitorFont="Courier New Bold 9"
 Window0Height=817
 Window0Width=841
-Window0Xpos=3297
-Window0Ypos=1480
+Window0Xpos=2921
+Window0Ypos=1488
+VirtualDevice8=1
 MachineVideoStandard=2
 MachinePowerFrequency=60
+IECReset=1
+CIA1Model=0
+CIA2Model=0
 VICIIFilter=0
-VICIIModel=4
+VICIIModel=3
+SidModel=0
+GlueLogic=0
+Drive8TrueEmulation=0
+DriveSoundEmulation=1
 
